# game-stats-webapp

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/routes/: +page.svelte
