[project]
name = "backend"
version = "0.1.0"
description = "backend for the game-stats-webapp"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.2",
    "pydantic>=2.11.9",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.36.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]
